# cpp_handy_utilities

./: CMakeLists.txt  README.md
FileHandler/: CMakeLists.txt  Readme.md
FileHandler/src/: FileHandler.hpp  main.cpp
src/: main.cpp
